[package]
name = "upix-dyn"
version = "0.1.0"
edition = "2021"
authors = [ "jiftechnify <jiftech.stlfy@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
upix-lib = { path = "../lib" }
regex = { version = "1.10.5", default-features = false, features = ["std"] }
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
image.workspace = true
futures.workspace = true